--- a/book/index_beta.html
+++ b/book/index_beta.html
@@ -14,8 +14,8 @@ p {line-height: 2}
     background-position: center;
     background-size: cover;
 }
-.bgimg {background-image: url("../images/gallery/fulls/13.jpg")}
-.bgimg2 {background-image: url("../images/gallery/thumbs/12.jpg")}
+.bgimg {background-image: url("../images/gallery/fulls/12.jpg")}
+.bgimg2 {background-image: url("../images/gallery/thumbs/13.jpg")}
 </style>
 <body>
 
@@ -24,7 +24,7 @@ p {line-height: 2}
   <div class="w3-display-middle w3-text-white w3-center">
     <h1 class="w3-jumbo">Tovin Sanzen</h1>
     <h2>// Photographer \\</h2>
-    <h2><b>17.07.2017</b></h2>
+    <h2><b>placeholder</b></h2>
   </div>
 </header>
 
@@ -32,29 +32,27 @@ p {line-height: 2}
 <div class="w3-bottom w3-hide-small">
   <div class="w3-bar w3-white w3-center w3-padding w3-opacity-min w3-hover-opacity-off">
     <a href="#home" style="width:25%" class="w3-bar-item w3-button">Home</a>
-    <a href="#us" style="width:25%" class="w3-bar-item w3-button">Jane & John</a>
-    <a href="#wedding" style="width:25%" class="w3-bar-item w3-button">Wedding</a>
-    <a href="#rsvp" style="width:25%" class="w3-bar-item w3-button w3-hover-black">RSVP</a>
+    <a href="#about" style="width:25%" class="w3-bar-item w3-button">About</a>
+    <a href="#pricing" style="width:25%" class="w3-bar-item w3-button">Pricing</a>
+    <a href="#contact" style="width:25%" class="w3-bar-item w3-button w3-hover-black">Contact</a>
   </div>
 </div>
 
 <!-- About / Jane And John -->
-<div class="w3-container w3-padding-64 w3-pale-red w3-grayscale-min" id="us">
+<div class="w3-container w3-padding-64 w3-pale-red w3-grayscale-min" id="about">
   <div class="w3-content">
-    <h1 class="w3-center w3-text-grey"><b>Jane & John</b></h1>
-    <img class="w3-round w3-grayscale-min" src="/w3images/wedding_couple2.jpg" style="width:100%;margin:32px 0">
-    <p><i>You all know us. And we all know you. We are getting married lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-      laboris nisi ut aliquip ex ea commodo consequat.</i>
+    <h1 class="w3-center w3-text-grey"><b>Tovin Sanzen Photography</b></h1>
+    <img class="w3-round w3-grayscale-min" src="../images/gallery/fulls/16.jpg" style="width:100%;margin:32px 0">
+    <p><i>Hello! My Name is TOvin! Placeholder text!</i>
     </p><br>
-    <p class="w3-center"><a href="#wedding" class="w3-button w3-black w3-round w3-padding-large w3-large">Wedding Details</a></p>
+    <p class="w3-center"><a href="#pricing" class="w3-button w3-black w3-round w3-padding-large w3-large">What Will It Cost?</a></p>
   </div>
 </div>
 
 <!-- Background photo -->
 <div class="w3-display-container bgimg2">
   <div class="w3-display-middle w3-text-white w3-center">
-    <h1 class="w3-jumbo">You Are Invited</h1><br>
+    <h1 class="w3-jumbo">Get On My Schedule</h1><br>
     <h2>Of course..</h2>
   </div>
 </div>
