--- a/book/index.html
+++ b/book/index.html
@@ -90,13 +90,13 @@
 </style>
             
             <div class="container">
-  <img src="../images/people/huldy.jpg" alt="Avatar" style="width:90px">
+  <img src="../images/huldy.jpg" alt="Avatar" style="width:90px">
   <p><span>Huldy Sannes</span> </p>
   <p>Goes the extra mile to obtain quality pictures as well as final prints!</p>
 </div>
 
 <div class="container">
-  <img src="../images/people/karen.jpg" alt="Avatar" style="width:90px">
+  <img src="../images/karen.jpg" alt="Avatar" style="width:90px">
   <p><span >Karen Pifher</span> </p>
   <p>Tovin did a great job in finding a beautiful location for some snapshots!</p>
 </div>
