Added place locatiosn

--- a/beta/index.html
+++ b/beta/index.html
@@ -76,7 +76,7 @@
                     <div class="col-sm-6 col-md-4 people">
                         <div class="portfolio-item">
                             <div class="hover-bg">
-                                <a href="img/portfolio/01-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+                                <a href="img/portfolio/01-large.jpg" title="Detroit Lakes, MN" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
                                         <div class="overlay-caption">
                                             <div class="overlay-content">
@@ -91,7 +91,7 @@
                     <div class="col-sm-6 col-md-4 people">
                         <div class="portfolio-item">
                             <div class="hover-bg">
-                                <a href="img/portfolio/02-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+                                <a href="img/portfolio/02-large.jpg" title="Frazee, MN" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
                                         <div class="overlay-caption">
                                             <div class="overlay-content">
@@ -106,7 +106,7 @@
                     <div class="col-sm-6 col-md-4 people">
                         <div class="portfolio-item">
                             <div class="hover-bg">
-                                <a href="img/portfolio/03-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+                                <a href="img/portfolio/03-large.jpg" title="Frazee, MN" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
                                         <div class="overlay-caption">
                                             <div class="overlay-content">
@@ -121,7 +121,7 @@
                     <div class="col-sm-6 col-md-4 people">
                         <div class="portfolio-item">
                             <div class="hover-bg">
-                                <a href="img/portfolio/04-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+                                <a href="img/portfolio/04-large.jpg" title="Frazee, MN" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
                                         <div class="overlay-caption">
                                             <div class="overlay-content">
@@ -136,7 +136,7 @@
                     <div class="col-sm-6 col-md-4 animals">
                         <div class="portfolio-item">
                             <div class="hover-bg">
-                                <a href="img/portfolio/05-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+                                <a href="img/portfolio/05-large.jpg" title="Frazee, MN" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
                                         <div class="overlay-caption">
                                             <div class="overlay-content">
@@ -151,7 +151,7 @@
                     <div class="col-sm-6 col-md-4 people">
                         <div class="portfolio-item">
                             <div class="hover-bg">
-                                <a href="img/portfolio/06-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+                                <a href="img/portfolio/06-large.jpg" title="Frazee, MN" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
                                         <div class="overlay-caption">
                                             <div class="overlay-content">
@@ -166,7 +166,7 @@
                     <div class="col-sm-6 col-md-4 people">
                         <div class="portfolio-item">
                             <div class="hover-bg">
-                                <a href="img/portfolio/07-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+                                <a href="img/portfolio/07-large.jpg" title="North Beach, FL" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
                                         <div class="overlay-caption">
                                             <div class="overlay-content">
@@ -181,7 +181,7 @@
                     <div class="col-sm-6 col-md-4 people">
                         <div class="portfolio-item">
                             <div class="hover-bg">
-                                <a href="img/portfolio/08-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+                                <a href="img/portfolio/08-large.jpg" title="Menhaga, MN" data-lightbox-gallery="gallery1">
                                     <div class="hover-text">
                                         <div class="overlay-caption">
                                             <div class="overlay-content">
