--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <section class="panel spotlight large left">
                 <div class="content span-5">
                     <h2 class="major">Purveyor of Good News</h2>
-                    <p><strong>-PUR · VEY · OR -a person who purveys, provides, or supplies -  <br> </strong> I like to think of myself as a Purveyor of Good News. Because with as much bad news as there is in the world right now, there is still good news. And that good news has a name, and that name is Jesus Christ- In fact, in 2018, I am working with Speed the Light to raise money and send the Good News to even more places! You can learn more about this adventure at <a href="stl/index.html">tjsanzen.net/stl</a>!</p>
+                    <p><strong>-PUR · VEY · OR -a person who purveys, provides, or supplies -  <br> </strong> I like to think of myself as a Purveyor of Good News. Because with as much bad news as there is in the world right now, there is still good news. And that good news has a name, and that name is Jesus Christ- And that is my mission in life. To show the entire world the Jesus I know, and the reckless, crazy love he has for them. </p>
                 </div>
                 <div class="image filtered tinted" data-position="top right">
                     <img src="images/pic03.jpg" alt="" />
@@ -106,7 +106,7 @@
                         <a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.JPG" alt="" /></a>
                     </div>
                     <a href="images/gallery/fulls/09.jpg" class="image filtered span-3" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-                    <a href="images/gallery/fulls/11.jpg" class="image filtered span-2-5" data-position="center"><img src="images/gallery/thumbs/11.jpg" alt="" /></a>
+                   
                     <a href="images/gallery/fulls/10.jpg" class="image filtered span-3" data-position="center"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
                 </div>
             </section>
