--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <li><a href="https://instagram.com/tovingram/" target="_blank"><span class="icon fa-instagram"><span class="label">Instagram</span></span></a></li>
                         <li><a href="https://facebook.com/tjsanzen/" target="_blank"><span class="icon fa-facebook"><span class="label">Facebook</span></span></a></li>
                         <li><a href="https://www.youtube.com/channel/UCQW2AYRJdKGjXmmV_VA_hJw" target="_blank"><span class="icon fa-youtube"><span class="label">YouTube</span></span></a></li>
-                        <li><a href="https://plus.google.com/+TovinSanzenReal/" target="_blank"><span class="icon fa-google"><span class="label">Google+</span></span></a></li>
+                        <li><a href="http://blog.tjsanzen.net/" target="_blank"><span class="icon fa-google"><span class="label">Blog</span></span></a></li>
                         <li><a href="https://twitter.com/tjsanzen/" target="_blank"><span class="icon fa-twitter"><span class="label">Twitter</span></span></a></li>
                         <li><a href="https://snapchat.com/add/tjsanzen/" target="_blank"><span class="icon fa-snapchat-ghost"><span class="label">Snapchat</span></span></a></li>
                     </ul>
