--- a/beta/index.html
+++ b/beta/index.html
@@ -387,7 +387,7 @@
                 </div>
 
 
-                <form name="sentMessage" id="contactForm" novalidate method="post" action="https://formspree.io/contact@tjsanzen.net">
+                <form id="contactForm" method="post" action="https://formspree.io/contact@tjsanzen.net">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -397,7 +397,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <input type="email" id="email" class="form-control" placeholder="Email" required="required">
+                                <input type="text" id="contact" class="form-control" placeholder="Phone or Email" required="required">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
