--- a/beta/index.html
+++ b/beta/index.html
@@ -387,7 +387,7 @@
                 </div>
 
 
-                <form id="contactForm" method="post" action="https://formspree.io/contact@tjsanzen.net">
+                <form method="post" action="https://formspree.io/contact@tjsanzen.net">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
