--- a/book/pricing.html
+++ b/book/pricing.html
@@ -43,7 +43,7 @@
                 <li class="w3-padding-16"><b>Single</b> Site</li>
                 <li class="w3-padding-16"><b>5 Day</b> Delivery</li>
                 <li class="w3-padding-16">
-                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 100</h2>
+                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 150</h2>
                     <span class="w3-opacity">per session</span>
                 </li>
                 <li class="w3-theme-l5 w3-padding-24">
@@ -62,7 +62,7 @@
                 <li class="w3-padding-16"><b>Single</b> Site</li>
                 <li class="w3-padding-16"><b>10 Day</b> Delivery</li>
                 <li class="w3-padding-16">
-                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 150+</h2>
+                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 200+</h2>
                     <span class="w3-opacity">per session</span>
                 </li>
                 <li class="w3-theme-l5 w3-padding-24">
@@ -81,7 +81,7 @@
                 <li class="w3-padding-16"><b>Multi</b> Site</li>
                 <li class="w3-padding-16"><b>24 Day</b> Delivery</li>
                 <li class="w3-padding-16">
-                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 250</h2>
+                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 175+</h2>
                     <span class="w3-opacity">per session</span>
                 </li>
                 <li class="w3-theme-l5 w3-padding-24">
@@ -100,7 +100,7 @@
                 <li class="w3-padding-16"><b>Multi</b> Site</li>
                 <li class="w3-padding-16"><b>1 Month</b> Delivery</li>
                 <li class="w3-padding-16">
-                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 300+</h2>
+                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 400+</h2>
                     <span class="w3-opacity">per event</span>
                 </li>
                 <li class="w3-theme-l5 w3-padding-24">
@@ -112,15 +112,15 @@
         <div class="w3-third w3-margin-bottom">
             <ul class="w3-ul w3-border w3-hover-shadow">
                 <li class="w3-theme-l2">
-                    <p class="w3-xlarge">Senior</p>
+                    <p class="w3-xlarge">Senior (School)</p>
                 </li>
-                <li class="w3-padding-16"><b>2</b> People</li>
-                <li class="w3-padding-16"><b>2+</b> Digital Photos</li>
+                <li class="w3-padding-16"><b>1</b> Person</li>
+                <li class="w3-padding-16"><b>10+</b> Digital Photos</li>
                 <li class="w3-padding-16"><b>Single</b> Site</li>
                 <li class="w3-padding-16"><b>14 Day</b> Delivery</li>
                 <li class="w3-padding-16">
-                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 25</h2>
-                    <span class="w3-opacity">per session (senior discount)</span>
+                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 100</h2>
+                    <span class="w3-opacity">per session</span>
                 </li>
                 <li class="w3-theme-l5 w3-padding-24">
                     <button class="w3-button w3-teal w3-padding-large"><i class="fa fa-check"></i> Sign Up</button>
