--- a/book/pricing.html
+++ b/book/pricing.html
@@ -112,11 +112,11 @@
         <div class="w3-third w3-margin-bottom">
             <ul class="w3-ul w3-border w3-hover-shadow">
                 <li class="w3-theme-l2">
-                    <p class="w3-xlarge">Senior (School)</p>
+                    <p class="w3-xlarge">Senior Photos</p>
                 </li>
                 <li class="w3-padding-16"><b>1</b> Person</li>
-                <li class="w3-padding-16"><b>10+</b> Digital Photos</li>
-                <li class="w3-padding-16"><b>Single</b> Site</li>
+                <li class="w3-padding-16"><b>30+</b> Digital Photos</li>
+                <li class="w3-padding-16"><b>Multi</b> Site</li>
                 <li class="w3-padding-16"><b>14 Day</b> Delivery</li>
                 <li class="w3-padding-16">
                     <h2 class="w3-wide"><i class="fa fa-usd"></i> 100</h2>
