--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<!-- Header -->
 					<header id="header">
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h1>I am <strong>Tovin</strong>, a Detroit Lakes based photographer, ready to work with your every need</h1>
+						<h1>I am <strong>Tovin</strong>, a Detroit Lakes based photographer, ready to work with your every need. <a href="book.html">contact me</a> today and we'll start talking.</h1>
 						<ul class="icons">
 							<li><a href="https://twitter.com/TJsanzen" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://facebook.com/tjsanzenphoto" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
