--- a/guitar/rates.html
+++ b/guitar/rates.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Binary by TEMPLATED</title>
+		<title>Rates - Guitar Lessons</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo"><strong>Binary</strong> by TEMPLATED</a>
+				<a href="index.html" class="logo"><strong>Guitar Lessons</strong> by tovin</a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -25,8 +25,8 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="rates.html">Rates</a></li>
+					
 				</ul>
 			</nav>
 
@@ -37,25 +37,26 @@
 						<img src="images/pic11.jpg" alt="" />
 					</div>
 					<header>
-						<h1>Lorem ipsum dolor sit amet</h1>
-						<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
+						<h1>My Pricing System</h1>
+						<p class="info"></p>
 					</header>
-					<p>Nullam posuere erat vel placerat rutrum. Praesent ac consectetur dui, et congue quam. Donec aliquam lacinia condimentum. Integer porta massa sapien, commodo sodales diam suscipit vitae. Aliquam quis felis sed urna semper semper. Phasellus eu scelerisque mi. Vivamus aliquam nisl libero, sit amet scelerisque ligula laoreet vel. Nunc ullamcorper ipsum at diam congue luctus. Sed nec sapien blandit, tempor quam non, consectetur turpis. Morbi libero lorem, hendrerit sed metus non, malesuada placerat nulla. Sed nisi turpis, rutrum eget rutrum euismod, consequat ullamcorper eros. Quisque tortor nunc, sodales convallis nisl non, bibendum tincidunt tortor. Etiam pellentesque tincidunt nunc, a dignissim dolor tempus et. Pellentesque in urna ligula. Fusce ligula velit, mollis ac diam non, rutrum fringilla turpis.</p>
-					<p>Aliquam consequat, nulla sed sodales convallis, sem odio porttitor justo, non volutpat augue libero eget neque. Nunc consequat arcu nec tortor venenatis tempus a placerat mauris. Nam ultricies consequat ligula, et placerat arcu ultrices a. Sed placerat ipsum lacus, at imperdiet nisi imperdiet at. Vivamus diam dui, accumsan quis lacinia ac, sollicitudin feugiat metus. Vestibulum a velit ac eros blandit molestie non eget erat. Nunc eget odio erat. Nulla sit amet enim pharetra tortor molestie tempor nec sed turpis. Cras eget odio at erat dictum tincidunt. Sed facilisis convallis mi, eget tempor nunc pellentesque pulvinar. Etiam volutpat luctus tristique.</p>
-					<p>Aliquam erat eros, pretium non facilisis id, mollis a lacus. Nam nunc nisl, consequat at est vel, ornare feugiat tortor. Phasellus tempor ex vel mi blandit convallis. Sed accumsan sapien quis bibendum posuere. Vivamus convallis mattis ipsum. Suspendisse viverra purus non mi cursus, vitae pulvinar dui condimentum. Donec dui lacus, pretium in neque vitae, laoreet tempus nulla. Maecenas ac augue bibendum, consectetur ante eu, vulputate ipsum.</p>
-					<p>Nullam volutpat, sem at hendrerit volutpat, magna orci facilisis purus, et venenatis sapien sapien pretium libero. Duis hendrerit eget metus at molestie. Duis leo lorem, interdum a placerat ut, ullamcorper at eros. Donec convallis auctor cursus. Integer placerat felis mauris, sed cursus diam sodales et. Phasellus mi nibh, scelerisque vulputate viverra ut, dictum vitae mi. In at blandit felis. Aenean id porttitor neque. Nam bibendum a orci non pretium. Pellentesque feugiat erat augue, quis venenatis diam mollis eu.</p>
+                    <p>Firstly, I just would like to express how grateful I am for you showing interest in having yourself or someone else take guitar lessons from me! As I stated on a previous page, I try to make it as affordable as possible, but am limited by the cost of needing to afford food.</p>
+                    <p>My pricing system starts at $30 for a half hour lesson, but then gets cheaper with the more lessons you commit to (for example, if you choose you want 4 lessons a month, I bundle them together for only $100)! As well as charging for my lessons, I also charge $2 per mile I have to travel to the location of the lessons. I do offer lessons from my home, but scheduling becomes slightly more difficult as I have to work around the schedules of those I live with.</p>
+                    <p>How my lessons are set up varries on pre-existing skill level, but we will cover a broad range of topics, such as chords, strumming, finger-picking, Nashville Number System, leading groups or bands, and live preformance, and recording. The student will have to demonstrate proficiency in each of these before moving on to the next level.
+                    </p>
+                    <p>If you're ready to get started, feel free to get in touch with me through any of my social media links below, or by contacting me through any of the following:<br>Email: <a href="mailto:hello@tjsanzen.net">hell@tjsanzen.net</a><br>Call or Text: <a href="tel:2188415586">218-841-5586</a></p>
 				</div>
 			</section>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://twitter.com/TJsanzen" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://facebook.com/tjsanzen" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://instagram.com/tovingram" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
 				<div class="copyright">
-					&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.
+					&copy; Tovin Sanzen. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="http://www.jensannesphotography.com">Jen Sannes Photography</a>.
 				</div>
 			</footer>
 
