--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<ul class="icons">
 							<li><a href="https://twitter.com/TJsanzen" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://facebook.com/tjsanzenphoto" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="https://instagram.com/tovingram" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://instagram.com/photosbytovin" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="mailto:hello@tjsanzen.net" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
