--- a/book.html
+++ b/book.html
@@ -187,12 +187,12 @@
     <!-- Footer -->
     <footer class="w3-container w3-padding-32 w3-theme-d1 w3-center">
         <h4>Follow Us</h4>
-        <a class="w3-button w3-large w3-teal" href="https://www.facebook.com/Tovin-Sanzen-Photography-175081696697701" title="Facebook"><i class="fa fa-facebook"></i></a>
+        <a class="w3-button w3-large w3-teal" href="https://www.facebook.com/tjsanzenphoto" title="Facebook"><i class="fa fa-facebook"></i></a>
         <a class="w3-button w3-large w3-teal" href="https://twitter.com/TJsanzen" title="Twitter"><i class="fa fa-twitter"></i></a>
         <a class="w3-button w3-large w3-teal" href="http://blog.tjsanzen.net" title="Google +"><i class="fa fa-google-plus"></i></a>
-        <a class="w3-button w3-large w3-teal" href="https://instagram.com/tovingram" title="Instagram"><i class="fa fa-instagram"></i></a>
+        <a class="w3-button w3-large w3-teal" href="https://instagram.com/photosbytovin" title="Instagram"><i class="fa fa-instagram"></i></a>
         <a class="w3-button w3-large w3-teal w3-hide-small" href="www.linkedin.com/in/tjsanzen" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-        <p>Powered with love by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a> and <a href="https://tjsanzen.net" target="_blank">tovin</a>.</p>
+        <p>Powered with love by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a> and <a href="http://tjsanzen.net" target="_blank">tovin</a>.</p>
 
         <div style="position:relative;bottom:100px;z-index:1;" class="w3-tooltip w3-right">
             <span class="w3-text w3-padding w3-teal w3-hide-small">Go To Top</span>
