added thots titles

--- a/thots/gender/gender_confusion.html
+++ b/thots/gender/gender_confusion.html
@@ -2,6 +2,7 @@
 
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
+    <title>Gender Confusion thots</title>
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
