--- a/thots/gender/index.html
+++ b/thots/gender/index.html
@@ -45,6 +45,8 @@ style='font-size:72.0pt;color:#C00000'>&nbsp;</span></p>
 
 <a href="gender_confusion.html"><p class=MsoNormal><b><u><span style='font-size:18.0pt;color:#00B0F0'>How Toxic
     Stereotypes Have Led To Gender Confusion --&gt;</span></u></b></p></a>
+    <br>
+    <a href="gay_thots.html"><p class=MsoNormal><b><u><span style='font-size:18.0pt;color:#00B0F0'>A Study of Homosexuality in Relation to the Bible --&gt;</span></u></b></p></a>
 
 </div>
 
