--- a/thots/complain.html
+++ b/thots/complain.html
@@ -828,7 +828,7 @@ v:shapes="Picture_x0020_1"><![endif]></span></p>
 
 <p class=MsoNormal align=center style='text-align:center'><o:p>&nbsp;</o:p></p>
 	
-	<audio controls preload="auto">
+	<audio controls preload="auto" autoplay="true">
   <source src="complain.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
