updated photogrpahy site

--- a/book.html
+++ b/book.html
@@ -119,7 +119,7 @@
                 <li class="w3-padding-16"><b></b>Price Dependant</li>
                 <li class="w3-padding-16"><b>14 Day</b> Delivery</li>
                 <li class="w3-padding-16">
-                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 50+</h2>
+                    <h2 class="w3-wide"><i class="fa fa-usd"></i> 200+</h2>
                     <span class="w3-opacity">per session</span>
                 </li>
                 <li class="w3-theme-l5 w3-padding-24">
@@ -167,8 +167,8 @@
                     <div class="w3-section">
                         <label>Plan</label>
                         <select name="locations" class="w3-input" name="plan" required>
-                            <option value="single">Single Site</option>
-                            <option value="2-5">2-5 Sites (+$50)</option>
+                            <option value="single">1-2 Sites (included)</option>
+                            <option value="2-5">4-5 Sites (+$50)</option>
                             <option value="5+">5+ Sites (+$150)</option>
                             <option value="no">Plan Specific</option>
                             
