--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>tovin sanzen photography</title>
+		<title>Gallery - tovin sanzen photo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,8 +17,8 @@
 			<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html" class="active"><span class="icon fa-home"></span></a></li>
-						<li><a href="gallery.html"><span class="icon fa-camera-retro"></span></a></li>
+						<li><a href="index.html"><span class="icon fa-home"></span></a></li>
+						<li><a href="gallery.html" class="active"><span class="icon fa-camera-retro"></span></a></li>
 						<li><a href="book.html"><span class="icon fa-file-text-o"></span></a></li>
 					</ul>
 				</nav>
@@ -26,54 +26,66 @@
 			<!-- Main -->
 				<section id="main">
 
-					<!-- Banner -->
-						<section id="banner">
-							<div class="inner">
-								<h1>Hey, I'm Tovin</h1>
-								<p>A local photographer looking to work with you. <a href="book.html">book me today</a></p>
-								<ul class="actions">
-									<li><a href="#galleries" class="button alt scrolly big">Continue</a></li>
-								</ul>
-							</div>
-						</section>
+					<!-- Header -->
+						<header id="header">
+							<div>tovin sanzen <span>photography</span></div>
+						</header>
 
 					<!-- Gallery -->
 						<section id="galleries">
 
 							<!-- Photo Galleries -->
 								<div class="gallery">
-									<header class="special">
-										<h2>see my work</h2>
-									</header>
-									<div class="content">
-										<div class="media">
-											<a href="images/fulls/01.jpg"><img src="images/thumbs/01.jpg" alt="" title="" /></a>
+
+									<!-- Filters -->
+										<header>
+											<h1>Gallery</h1>
+											<ul class="tabs">
+												<li><a href="#" data-tag="all" class="button active">All</a></li>
+												<li><a href="#" data-tag="senior" class="button">Seniors</a></li>
+												<li><a href="#" data-tag="family" class="button">Family</a></li>
+												<li><a href="#" data-tag="other" class="button">Other</a></li>
+											</ul>
+										</header>
+
+										<div class="content">
+											<div class="media all family">
+												<a href="images/fulls/01.jpg"><img src="images/thumbs/01.jpg" alt="" title="" /></a>
+											</div>
+											<div class="media all other">
+												<a href="images/fulls/05.jpg"><img src="images/thumbs/05.jpg" alt="" title="" /></a>
+											</div>
+											<div class="media all senior">
+												<a href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" title="" /></a>
+											</div>
+											<div class="media all senior">
+												<a href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" title="" /></a>
+											</div>
+											<div class="media all senior">
+												<a href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" title="" /></a>
+											</div>
+											<div class="media all other">
+												<a href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" title="" /></a>
+											</div>
+											<div class="media all senior">
+												<a href="images/fulls/03.jpg"><img src="images/thumbs/03.jpg" alt="" title="" /></a>
+											</div>
+											<div class="media all family">
+												<a href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" title="" /></a>
+											</div>
+											<div class="media all other">
+												<a href="images/fulls/11.jpg"><img src="images/thumbs/11.jpg" alt="" title="" /></a>
+											</div>
+											<div class="media all senior">
+												<a href="images/fulls/04.jpg"><img src="images/thumbs/04.jpg" alt="" title="" /></a>
+											</div>
+											<div class="media all family">
+												<a href="images/fulls/08.jpg"><img src="images/thumbs/08.jpg" alt="" title="" /></a>
+											</div>
+											<div class="media all other">
+												<a href="images/fulls/12.jpg"><img src="images/thumbs/12.jpg" alt="" title="" /></a>
+											</div>
 										</div>
-										<div class="media">
-											<a href="images/fulls/05.jpg"><img src="images/thumbs/05.jpg" alt="" title="" /></a>
-										</div>
-										<div class="media">
-											<a href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" title="" /></a>
-										</div>
-										<div class="media">
-											<a href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" title="" /></a>
-										</div>
-										<div class="media">
-											<a href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" title="" /></a>
-										</div>
-										<div class="media">
-											<a href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" title="" /></a>
-										</div>
-										<div class="media">
-											<a href="images/fulls/03.jpg"><img src="images/thumbs/03.jpg" alt="" title="" /></a>
-										</div>
-										<div class="media">
-											<a href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" title="" /></a>
-										</div>
-									</div>
-									<footer>
-										<a href="gallery.html" class="button big">Full Gallery</a>
-									</footer>
 								</div>
 						</section>
 
