--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<!-- Social -->
 								<div class="social column">
 									<h3>About Me</h3>
-									<p>Hello! My name is Tovin, and I'm a photographer based out of the Detroit Lakes area! I've been doing photography since about 2015, and have had my work featured in many places since, ranging from art gallaries to being featured on the Minnesota Photography Club page's background! I'd be more than happy to work with you to get photos that you can be proud to share!</p>
+									<p>Hello! My name is Tovin, and I'm a photographer based out of the Hillsboro Kansas area! I've been doing photography since about 2015, and have had my work featured in many places since, ranging from art gallaries to being featured on the Minnesota Photography Club page's background! I'd be more than happy to work with you to get photos that you can be proud to share!</p>
 									<p>Every photo experience starts out with open communication, making sure that I know exactly what you want to get from the shoot. We then choose a time, and go out and have a shoot, ranging from as short as 20 minutes, up to a full day, depending on your needs! I then have a 14-day processing guarantee, making sure you get your photos as soon as possible! To get started, <a href="book.html">book your session today!</a></p>
 									<h3>Follow Me</h3>
 									<ul class="icons">
