--- a/book.html
+++ b/book.html
@@ -135,9 +135,9 @@
         <div class="w3-row">
             <div class="w3-col m5">
                 <div class="w3-padding-16"><span class="w3-xlarge w3-border-teal w3-bottombar">Contact Me</span></div>
-                <h3>Frazee Minnesota</h3>
+                <h3>Hillsboro Kansas</h3>
                 <p>Swing by for a cup of coffee, or whatever.</p>
-                <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i> Frazee, Minnesota</p>
+                <p><i class="fa fa-map-marker w3-text-teal w3-xlarge"></i> Hillsboro, Kansas</p>
                 <p><i class="fa fa-phone w3-text-teal w3-xlarge"></i> +1 218 841 5586</p>
                 <p><i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i> book@tjsanzen.net</p>
             </div>
